# blog

./: .gitignore  README.md  alembic.ini  database.py  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2304f33826fd_create_posts_table.py  3f9fb25e15be_add_default_to_published.py
docs/: posts.py
schemas/: schema.py
scripts/: seed_posts.py
src/app/: exceptions.py  main.py
src/app/api/: api.py  dependencies.py
src/app/api/routes/: auth.py  posts.py  users.py
src/app/core/: config.py  metadata.py  security.py
src/app/core/middleware/: cors.py  logging_config.py  security_headers.py
src/app/db/: database.py  fake_db.py
src/app/db/tables/: posts.py  users.py
src/app/docs/: posts.py
src/app/schemas/: auth.py  fake_schemas.py  schema.py
